www: updating table to fix wraping issues

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,6 @@ tr.heading {
 }
 
 .jobBox {
-    border: 1px solid;
     position: static;
     float: left;
 }
